--- a/bib-file.bib
+++ b/bib-file.bib
@@ -97004,3 +97004,397 @@
   year            = {2021},
   publisher       = {Springer}
 }
+
+@misc{skafte_mlops,
+  author          = {Nicki Skafte Detlefsen},
+  title           = {Machine Learning Operations},
+  howpublished    = {\url{https://github.com/SkafteNicki/dtu_mlops}},
+  year            = 2022
+}
+
+@misc{https://doi.org/10.48550/arxiv.1707.01495,
+  doi             = {10.48550/ARXIV.1707.01495},
+  url             = {https://arxiv.org/abs/1707.01495},
+  author          = {Andrychowicz, Marcin and Wolski, Filip and Ray, Alex and
+                  Schneider, Jonas and Fong, Rachel and Welinder, Peter and
+                  McGrew, Bob and Tobin, Josh and Abbeel, Pieter and Zaremba,
+                  Wojciech},
+  keywords        = {Machine Learning (cs.LG), Artificial Intelligence (cs.AI),
+                  Neural and Evolutionary Computing (cs.NE), Robotics (cs.RO),
+                  FOS: Computer and information sciences, FOS: Computer and
+                  information sciences},
+  title           = {Hindsight Experience Replay},
+  publisher       = {arXiv},
+  year            = 2017,
+  copyright       = {arXiv.org perpetual, non-exclusive license}
+}
+
+@misc{https://doi.org/10.48550/arxiv.1902.09355,
+  doi             = {10.48550/ARXIV.1902.09355},
+  url             = {https://arxiv.org/abs/1902.09355},
+  author          = {Censi, Andrea and Slutsky, Konstantin and Wongpiromsarn,
+                  Tichakorn and Yershov, Dmitry and Pendleton, Scott and Fu,
+                  James and Frazzoli, Emilio},
+  keywords        = {Artificial Intelligence (cs.AI), FOS: Computer and
+                  information sciences, FOS: Computer and information sciences},
+  title           = {Liability, Ethics, and Culture-Aware Behavior Specification
+                  using Rulebooks},
+  publisher       = {arXiv},
+  year            = {2019},
+  copyright       = {arXiv.org perpetual, non-exclusive license}
+}
+
+@article{lacerda2019probabilistic,
+  title           = {Probabilistic planning with formal performance guarantees
+                  for mobile service robots},
+  author          = {Lacerda, Bruno and Faruq, Fatma and Parker, David and
+                  Hawes, Nick},
+  journal         = {The International Journal of Robotics Research},
+  volume          = {38},
+  number          = {9},
+  pages           = {1098--1123},
+  year            = {2019},
+  publisher       = {SAGE Publications Sage UK: London, England}
+}
+
+@article{tambon2022certify,
+  title           = {How to certify machine learning based safety-critical
+                  systems? A systematic literature review},
+  author          = {Tambon, Florian and Laberge, Gabriel and An, Le and
+                  Nikanjam, Amin and Mindom, Paulina Stevia Nouwou and
+                  Pequignot, Yann and Khomh, Foutse and Antoniol, Giulio and
+                  Merlo, Ettore and Laviolette, Fran{\c{c}}ois},
+  journal         = {Automated Software Engineering},
+  volume          = {29},
+  number          = {2},
+  pages           = {38},
+  year            = {2022},
+  publisher       = {Springer}
+}
+
+@ARTICLE{9984982,
+  author          = {Neto, Antonio V. Silva and Camargo, João B. and Almeida,
+                  Jorge R. and Cugnasca, Paulo S.},
+  journal         = {IEEE Access},
+  title           = {Safety Assurance of Artificial Intelligence-Based Systems:
+                  A Systematic Literature Review on the State of the Art and
+                  Guidelines for Future Work},
+  year            = {2022},
+  volume          = {10},
+  number          = {},
+  pages           = {130733-130770},
+  doi             = {10.1109/ACCESS.2022.3229233}
+}
+
+@article{doi:10.1146/annurev-control-042920-020211,
+  author          = {Brunke, Lukas and Greeff, Melissa and Hall, Adam W. and
+                  Yuan, Zhaocong and Zhou, Siqi and Panerati, Jacopo and
+                  Schoellig, Angela P.},
+  title           = {Safe Learning in Robotics: From Learning-Based Control to
+                  Safe Reinforcement Learning},
+  journal         = {Annual Review of Control, Robotics, and Autonomous Systems},
+  volume          = {5},
+  number          = {1},
+  pages           = {411-444},
+  year            = {2022},
+  doi             = {10.1146/annurev-control-042920-020211},
+  URL             = { https://doi.org/10.1146/annurev-control-042920-020211 },
+  eprint          = { https://doi.org/10.1146/annurev-control-042920-020211 }
+,
+  abstract        = { The last half decade has seen a steep rise in the number
+                  of contributions on safe learning methods for real-world
+                  robotic deployments from both the control and reinforcement
+                  learning communities. This article provides a concise but
+                  holistic review of the recent advances made in using machine
+                  learning to achieve safe decision-making under uncertainties,
+                  with a focus on unifying the language and frameworks used in
+                  control theory and reinforcement learning research. It
+                  includes learning-based control approaches that safely improve
+                  performance by learning the uncertain dynamics, reinforcement
+                  learning approaches that encourage safety or robustness, and
+                  methods that can formally certify the safety of a learned
+                  control policy. As data- and learning-based robot control
+                  methods continue to gain traction, researchers must understand
+                  when and how to best leverage them in real-world scenarios
+                  where safety is imperative, such as when operating in close
+                  proximityto humans. We highlight some of the open challenges
+                  that will drive the field of robot learning in the coming
+                  years, and emphasize the need for realistic physics-based
+                  benchmarks to facilitate fair comparisons between control and
+                  reinforcement learning approaches. }
+}
+
+@INPROCEEDINGS{9989562,
+  author          = {Karunakaran, Dhanoop and Berrio, Julie Stephany and
+                  Worrall, Stewart and Nebot, Eduardo},
+  booktitle       = {2022 IEEE International Conference on Recent Advances in
+                  Systems Science and Engineering (RASSE)},
+  title           = {Challenges Of Testing Highly Automated Vehicles: A
+                  Literature Review},
+  year            = {2022},
+  volume          = {},
+  number          = {},
+  pages           = {1-8},
+  doi             = {10.1109/RASSE54974.2022.9989562}
+}
+
+@article{UNGER2018254,
+  title           = {Evaluation of use cases of autonomous mobile robots in
+                  factory environments},
+  journal         = {Procedia Manufacturing},
+  volume          = {17},
+  pages           = {254-261},
+  year            = {2018},
+ note            = {28th International Conference on Flexible Automation and
+                  Intelligent Manufacturing (FAIM2018), June 11-14, 2018,
+                  Columbus, OH, USAGlobal Integration of Intelligent
+                  Manufacturing and Smart Industry for Good of Humanity},
+  issn            = {2351-9789},
+  doi             = {https://doi.org/10.1016/j.promfg.2018.10.044},
+  url             =
+                  {https://www.sciencedirect.com/science/article/pii/S2351978918311600},
+  author          = {Hendrik Unger and Tobias Markert and Egon Müller},
+  keywords        = {collaborative robotics in smart manufacturing,
+                  manufacturing systems design, analysis, robotics, computer
+                  integrated manufacturing, factory planing methodology,
+                  autonomous robotics},
+  abstract        = {The current research goal in the field of robotics is to
+                  develop collaborative robots that can safely share their
+                  workspace with human coworkers. While there are working
+                  solutions to protect humans from damages induced by the body
+                  of the robot there are still challenges in the field of tool
+                  and work piece safety. When these challenges are completed one
+                  of the next steps will be to enable these currently spatial
+                  static robots to move freely in their working environment by
+                  mounting them to a mobile platform. In the context of future
+                  factories this enables new use cases and automatization
+                  scenarios that are not possible today. This paper shows
+                  several of these future use cases by systematically evaluating
+                  current factory structures and deducting areas for mobile
+                  robot support. To verify the theoretical results, several
+                  interviews with representatives of German companies in
+                  different market branches have been conducted and evaluated in
+                  the course of this publication. This paper is the basic work
+                  to a method for planning the application of mobile robots in
+                  future factories. The outlook describes further steps in the
+                  research, including necessary data to successfully complete
+                  certain use cases, considerations on fleet and task manager
+                  design, as well as influences of the application of mobile
+                  robots on the general factory planning methodology.}
+}
+
+@article{VICENTINI2020101921,
+  title           = {Terminology in safety of collaborative robotics},
+  journal         = {Robotics and Computer-Integrated Manufacturing},
+  volume          = {63},
+  pages           = {101921},
+  year            = {2020},
+  issn            = {0736-5845},
+  doi             = {https://doi.org/10.1016/j.rcim.2019.101921},
+  url             =
+                  {https://www.sciencedirect.com/science/article/pii/S0736584519300614},
+  author          = {Federico Vicentini},
+  keywords        = {Collaborative robotics safety, Safety definitions,
+                  Terminology, Safety normative requirements},
+  abstract        = {Popular non-normative terms in robot safety, including
+                  “co-existence”, “collaboration”, “cooperation”, “collaborative
+                  robot”, “cobot”, are used inconsistently in technical
+                  literature and in practice. Comparison of terms and evidence
+                  of inconsistency are provided on the basis of recent works
+                  about safety of collaborative robotics. Frequency and energy
+                  of interaction are discussed as more appropriated
+                  classification figures for the purpose of risk assessment.
+                  Examples and recommendations about the classification of
+                  safety methods are discussed according to contemporary
+                  state-dependent, mixed modes safety strategies.}
+}
+
+@article{10.1115/1.4046238,
+  author          = {Vicentini, Federico},
+  title           = "{Collaborative Robotics: A Survey}",
+  journal         = {Journal of Mechanical Design},
+  volume          = {143},
+  number          = {4},
+  year            = {2020},
+  month           = {10},
+  abstract        = "{Collaborative robotics is an umbrella term that conveys
+                  the general idea of proximity between machines and humans for
+                  some useful tasks in a shared space, with a range of options
+                  for timing (continuously, synchronously, alternately, etc.).
+                  While this type of human robot interaction is fairly common in
+                  many fields of robotics, this survey is dedicated to the
+                  technology and situations that are typical of industrial
+                  applications. The current state-of-the-art in collaborative
+                  robotics for industrial applications is the result of a long
+                  legacy of research and development in actuation principles and
+                  mechanisms from 2000s onward, together with an abundant
+                  literature about improving control performances, intuitive
+                  interaction modes, and perception with sensors. Safety
+                  technology and standardization is discussed according to the
+                  principles of risk estimation and the typical strategies for
+                  risk reduction that are suitable for different classes of
+                  robot systems are used in collaborative applications. The
+                  organization of applications (planning, role assignment,
+                  optimization of resources) has a major impact on both the
+                  quality and the safety of collaborative robotics solutions,
+                  with most of the literature focused on investigating those
+                  performance metrics that combine human factors and production
+                  figures. The survey is intended to delineate an interpretation
+                  key for the design of collaborative robotics solution that
+                  explains the relationship among all relevant factors:
+                  actuation, control, safety, physical interaction, usability,
+                  and productivity.}",
+  issn            = {1050-0472},
+  doi             = {10.1115/1.4046238},
+  url             = {https://doi.org/10.1115/1.4046238},
+  note            = {040802},
+  eprint          =
+                  {https://asmedigitalcollection.asme.org/mechanicaldesign/article-pdf/143/4/040802/6661214/md\_143\_4\_040802.pdf},
+}
+
+@article{MULLER202272,
+  title           = {Situational Risk Assessment Design for Autonomous Mobile
+                  Robots},
+  journal         = {Procedia CIRP},
+  volume          = {109},
+  pages           = {72-77},
+  year            = {2022},
+  note            = {32nd CIRP Design Conference (CIRP Design 2022) - Design in
+                  a changing world},
+  issn            = {2212-8271},
+  doi             = {https://doi.org/10.1016/j.procir.2022.05.216},
+  url             =
+                  {https://www.sciencedirect.com/science/article/pii/S2212827122006643},
+  author          = {Manuel Müller and Golsa Ghasemi and Nasser Jazdi and
+                  Michael Weyrich},
+  keywords        = {Situational Risk Assessment, Digital Twin, Design Approach,
+                  Complexity, System Theoretic Process Analysis (STPA)},
+  abstract        = {The emerging autonomous mobile robots promise a new level
+                  of efficiency and flexibility. However, because these types of
+                  systems operate in the same space as humans, mobile robots
+                  must cope with dynamic changes and heterogeneously structured
+                  environments. To ensure safety, new approaches are needed that
+                  model risk at runtime. This risk depends on the situation and
+                  is therefore a situational risk. In this paper, we propose a
+                  new methodology to model situational risk based on multi-agent
+                  adversarial reinforcement learning. In this methodology, two
+                  competing groups of reinforcement learning agents, namely the
+                  protagonists and the adversaries, fight against each other in
+                  the simulation. The adversaries represent the disruptive and
+                  destabilizing factors, while the protagonists try to
+                  compensate for them. The situational risk is then derived from
+                  the outcome of the simulated struggle. At this point, the
+                  system’s Digital Twin provides up-to-date and relevant models
+                  for simulation and synchronizes the simulation with the real
+                  asset. Our risk modeling differentiates the four steps of
+                  intelligent information processing: sense, analyze, process,
+                  and execute. To find the appropriate adversaries and actors
+                  for each of these steps, this methodology builds on Systems
+                  Theoretic Process Analysis (STPA). Using STPA, we identify
+                  critical signals that lead to losses when a disturbance under
+                  certain conditions or in certain situations occurs. At this
+                  point, the challenge of managing the complexity arises. We
+                  face this issue using training effort as a metric to evaluate
+                  it. Through statistical analysis of the identified signals, we
+                  derive a procedure for defining action spaces and rewards for
+                  the agents in question. We validate the methodology using the
+                  example of a Robotino 3 Premium from Festo, an autonomous
+                  mobile robot.}
+}
+
+@article{10.1145/3442678,
+  author          = {Salvini, Pericle and Paez-Granados, Diego and Billard,
+                  Aude},
+  title           = {On the Safety of Mobile Robots Serving in Public Spaces:
+                  Identifying Gaps in EN ISO 13482:2014 and Calling for a New
+                  Standard},
+  year            = {2021},
+  issue_date      = {September 2021},
+  publisher       = {Association for Computing Machinery},
+  address         = {New York, NY, USA},
+  volume          = {10},
+  number          = {3},
+  url             = {https://doi.org/10.1145/3442678},
+  doi             = {10.1145/3442678},
+  abstract        = {Since 2014, a specific standard has been dedicated for the
+                  safety certification of personal care robots, which operate in
+                  close proximity to humans. These robots serve as information
+                  providers, object transporters, personal mobility carriers,
+                  and security patrollers. In this article, we point out the
+                  shortcomings concerning EN ISO 13482:2014, which encompasses
+                  guidelines regarding the safety and design of personal care
+                  robots. In particular, we argue that the current standard is
+                  not suitable for guaranteeing people's safety when these
+                  robots operate in public spaces. Specifically, the standard
+                  lacks requirements to protect pedestrians and bystanders. The
+                  guideline implicitly assumes that private spaces, such as
+                  households and offices, present the same hazards as in public
+                  spaces. We highlight the existence of at least three
+                  properties pertaining to robots’ use in public spaces. These
+                  properties include (1) crowds, (2) social norms and proxemics
+                  rules, and (3) people's misbehaviours. We discuss how these
+                  properties impact robots’ safety. This article aims to raise
+                  stakeholders’ awareness on individuals’ safety when robots are
+                  deployed in public spaces. This could be achieved by
+                  integrating the gaps present in EN ISO 13482:2014 or by
+                  creating a new dedicated standard.},
+  journal         = {J. Hum.-Robot Interact.},
+  month           = {jul},
+  articleno       = {19},
+  numpages        = {27},
+  keywords        = {Human-robot interaction, personal care robot, mobile robot,
+                  service robots, safety, ISO standard, public spaces}
+}
+
+@INPROCEEDINGS{9561819,
+  author          = {Bradley, Christopher and Pacheck, Adam and Stein, Gregory
+                  J. and Castro, Sebastian and Kress-Gazit, Hadas and Roy,
+                  Nicholas},
+  booktitle       = {2021 IEEE International Conference on Robotics and
+                  Automation (ICRA)},
+  title           = {Learning and Planning for Temporally Extended Tasks in
+                  Unknown Environments},
+  year            = 2021,
+  pages           = {4830-4836},
+  doi             = {10.1109/ICRA48506.2021.9561819}
+}
+
+@ARTICLE{9899480,
+  author          = {Lauri, Mikko and Hsu, David and Pajarinen, Joni},
+  journal         = {IEEE Transactions on Robotics},
+  title           = {Partially Observable Markov Decision Processes in Robotics:
+                  A Survey},
+  year            = 2023,
+  volume          = 39,
+  number          = 1,
+  pages           = {21-40},
+  doi             = {10.1109/TRO.2022.3200138}
+}
+
+@article{arents2021human,
+  title={Human--robot collaboration trends and safety aspects: A systematic review},
+  author={Arents, Janis and Abolins, Valters and Judvaitis, Janis and Vismanis, Oskars and Oraby, Aly and Ozols, Kaspars},
+  journal={Journal of Sensor and Actuator Networks},
+  volume={10},
+  number={3},
+  pages={48},
+  year={2021},
+  publisher={MDPI}
+}
+
+@misc{https://doi.org/10.48550/arxiv.1908.07919,
+  doi             = {10.48550/ARXIV.1908.07919},
+  url             = {https://arxiv.org/abs/1908.07919},
+  author          = {Wang, Jingdong and Sun, Ke and Cheng, Tianheng and Jiang,
+                  Borui and Deng, Chaorui and Zhao, Yang and Liu, Dong and Mu,
+                  Yadong and Tan, Mingkui and Wang, Xinggang and Liu, Wenyu and
+                  Xiao, Bin},
+  keywords        = {Computer Vision and Pattern Recognition (cs.CV), FOS:
+                  Computer and information sciences, FOS: Computer and
+                  information sciences},
+  title           = {Deep High-Resolution Representation Learning for Visual
+                  Recognition},
+  publisher       = {arXiv},
+  year            = 2019,
+  copyright       = {arXiv.org perpetual, non-exclusive license}
+}
