--- a/bib-file.bib
+++ b/bib-file.bib
@@ -97372,14 +97372,16 @@
 }
 
 @article{arents2021human,
-  title={Human--robot collaboration trends and safety aspects: A systematic review},
-  author={Arents, Janis and Abolins, Valters and Judvaitis, Janis and Vismanis, Oskars and Oraby, Aly and Ozols, Kaspars},
-  journal={Journal of Sensor and Actuator Networks},
-  volume={10},
-  number={3},
-  pages={48},
-  year={2021},
-  publisher={MDPI}
+  title =        {Human--robot collaboration trends and safety aspects: A
+                  systematic review},
+  author =       {Arents, Janis and Abolins, Valters and Judvaitis, Janis and
+                  Vismanis, Oskars and Oraby, Aly and Ozols, Kaspars},
+  journal =      {Journal of Sensor and Actuator Networks},
+  volume =       {10},
+  number =       {3},
+  pages =        {48},
+  year =         {2021},
+  publisher =    {MDPI}
 }
 
 @misc{https://doi.org/10.48550/arxiv.1908.07919,
@@ -97397,4 +97399,14 @@
   publisher       = {arXiv},
   year            = 2019,
   copyright       = {arXiv.org perpetual, non-exclusive license}
+}
+
+@article{scheutz2017case,
+  title =        {The case for explicit ethical agents},
+  author =       {Scheutz, Matthias},
+  journal =      {Ai Magazine},
+  volume =       38,
+  number =       4,
+  pages =        {57--64},
+  year =         2017
 }
