--- a/bib-file.bib
+++ b/bib-file.bib
@@ -97410,3 +97410,76 @@
   pages =        {57--64},
   year =         2017
 }
+
+@inproceedings{driess2023palme,
+  title =        {PaLM-E: An Embodied Multimodal Language Model},
+  author =       {Driess, Danny and Xia, Fei and Sajjadi, Mehdi S. M. and Lynch,
+                  Corey and Chowdhery, Aakanksha and Ichter, Brian and Wahid,
+                  Ayzaan and Tompson, Jonathan and Vuong, Quan and Yu, Tianhe
+                  and Huang, Wenlong and Chebotar, Yevgen and Sermanet, Pierre
+                  and Duckworth, Daniel and Levine, Sergey and Vanhoucke,
+                  Vincent and Hausman, Karol and Toussaint, Marc and Greff,
+                  Klaus and Zeng, Andy and Mordatch, Igor and Florence, Pete},
+  booktitle =    {arXiv preprint arXiv:2302.11111},
+  year =         {2023}
+}
+
+@article{ZHANG2023104063,
+  title           = {Predictive trajectory planning for autonomous vehicles at
+                  intersections using reinforcement learning},
+  journal         = {Transportation Research Part C: Emerging Technologies},
+  volume          = {149},
+  pages           = {104063},
+  year            = {2023},
+  issn            = {0968-090X},
+  doi             = {https://doi.org/10.1016/j.trc.2023.104063},
+  url             =
+                  {https://www.sciencedirect.com/science/article/pii/S0968090X23000529},
+  author          = {Ethan Zhang and Ruixuan Zhang and Neda Masoud},
+  keywords        = {Trajectory planning, Trajectory prediction, Autonomous
+                  vehicles, Reinforcement learning},
+  abstract        = {In this work we put forward a predictive trajectory
+                  planning framework to help autonomous vehicles plan future
+                  trajectories. We develop a partially observable Markov
+                  decision process (POMDP) to model this sequential decision
+                  making problem, and a deep reinforcement learning solution
+                  methodology to learn high-quality policies. The POMDP model
+                  utilizes driving scenarios, condensed into graphs, as inputs.
+                  More specifically, an input graph contains information on the
+                  history trajectory of the subject vehicle, predicted
+                  trajectories of other agents in the scene (e.g., other
+                  vehicles, pedestrians, and cyclists), as well as predicted
+                  risk levels posed by surrounding vehicles to devise safe,
+                  comfortable, and energy-efficient trajectories for the subject
+                  vehicle to follow. In order to obtain sufficient driving
+                  scenarios to use as training data, we propose a simulation
+                  framework to generate socially acceptable driving scenarios
+                  using a real world autonomous vehicle dataset. The simulation
+                  framework utilizes Bayesian Gaussian mixture models to learn
+                  trajectory patterns of different agent types, and Gibbs
+                  sampling to ensure that the distribution of simulated
+                  scenarios matches that of the real-world dataset collected by
+                  an autonomous fleet. We evaluate the proposed work in two
+                  complex urban driving environments: a non-signalized
+                  T-junction and a non-signalized lane merge intersection. Both
+                  environments provide vastly more complex driving scenarios
+                  compared to a highway driving environment, which has been
+                  mostly the focus of previous studies. The framework
+                  demonstrates promising performance for planning horizons as
+                  long as five seconds. We compare safety, comfort, and energy
+                  efficiency of the planned trajectories against human-driven
+                  trajectories in both experimental driving environments, and
+                  demonstrate that it outperforms human-driven trajectories in a
+                  statistically significant fashion in all aspects.}
+}
+
+@misc{li2023planninginspired,
+  title           = {Planning-inspired Hierarchical Trajectory Prediction for
+                  Autonomous Driving},
+  author          = {Ding Li and Qichao Zhang and Zhongpu Xia and Kuan Zhang and
+                  Menglong Yi and Wenda Jin and Dongbin Zhao},
+  year            = {2023},
+  eprint          = {2304.11295},
+  archivePrefix   = {arXiv},
+  primaryClass    = {cs.RO}
+}
