recnet readings May 2023

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -72094,3 +72094,24 @@
 	archiveprefix = {arXiv},
 	primaryclass = {cs.CV}
 }
+
+@article{wu2023tidybot,
+  title			  = {TidyBot: Personalized Robot Assistance with Large Language
+                  Models},
+  author		  = {Wu, Jimmy and Antonova, Rika and Kan, Adam and Lepert,
+                  Marion and Zeng, Andy and Song, Shuran and Bohg, Jeannette and
+                  Rusinkiewicz, Szymon and Funkhouser, Thomas},
+  journal		  = {arXiv preprint arXiv:2305.05658},
+  year			  = {2023}
+}
+
+@article{igl22:_symph,
+  title			  = {Symphony: Learning Realistic and Diverse Agents for
+                  Autonomous Driving Simulation},
+  author		  = {Maximilian Igl and Daewoo Kim and Alex Kuefler and Paul
+                  Mougin and Punit Shah and Kyriacos Shiarlis and Dragomir
+                  Anguelov and Mark Palatucci and Brandyn White and Shimon
+                  Whiteson},
+  journal		  = {arXiv},
+  year			  = 2022
+}
