End of quarter update

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -72097,7 +72097,7 @@
 
 @article{wu2023tidybot,
   title			  = {TidyBot: Personalized Robot Assistance with Large Language
-                  Models},
+                     Models},
   author		  = {Wu, Jimmy and Antonova, Rika and Kan, Adam and Lepert,
                   Marion and Zeng, Andy and Song, Shuran and Bohg, Jeannette and
                   Rusinkiewicz, Szymon and Funkhouser, Thomas},
@@ -72107,11 +72107,92 @@
 
 @article{igl22:_symph,
   title			  = {Symphony: Learning Realistic and Diverse Agents for
-                  Autonomous Driving Simulation},
+                     Autonomous Driving Simulation},
   author		  = {Maximilian Igl and Daewoo Kim and Alex Kuefler and Paul
-                  Mougin and Punit Shah and Kyriacos Shiarlis and Dragomir
-                  Anguelov and Mark Palatucci and Brandyn White and Shimon
-                  Whiteson},
+                     Mougin and Punit Shah and Kyriacos Shiarlis and Dragomir
+                     Anguelov and Mark Palatucci and Brandyn White and Shimon
+                     Whiteson},
   journal		  = {arXiv},
   year			  = 2022
+}
+
+@InProceedings{macenski2020marathon2,
+  title			  = {The Marathon 2: A Navigation System},
+  author		  = {Macenski, Steve and Martín, Francisco and White, Ruffin and
+                  Ginés Clavero, Jonatan},
+  year			  = {2020},
+  booktitle		  = {2020 IEEE/RSJ International Conference on Intelligent
+                  Robots and Systems (IROS)},
+  url			  = {https://github.com/ros-planning/navigation2},
+  pdf			  = {https://arxiv.org/abs/2003.00368}
+}
+
+@InProceedings{vslamComparison2021,
+  title			  = {A Comparison of Modern General-Purpose Visual SLAM
+                  Approaches},
+  author		  = {Merzlyakov, Alexey and Macenski, Steven},
+  year			  = {2021},
+  booktitle		  = {2021 IEEE/RSJ International Conference on Intelligent
+                  Robots and Systems (IROS)},
+  pdf			  = {https://arxiv.org/abs/2107.07589}
+}
+
+@inproceedings{openvslam2019,
+  author		  = {Sumikura, Shinya and Shibuya, Mikiya and Sakurada, Ken},
+  title			  = {{OpenVSLAM: A Versatile Visual SLAM Framework}},
+  booktitle		  = {Proceedings of the 27th ACM International Conference on
+                  Multimedia},
+  series		  = {MM '19},
+  year			  = {2019},
+  isbn			  = {978-1-4503-6889-6},
+  location		  = {Nice, France},
+  pages			  = {2292--2295},
+  numpages		  = {4},
+  url			  = {http://doi.acm.org/10.1145/3343031.3350539},
+  doi			  = {10.1145/3343031.3350539},
+  acmid			  = {3350539},
+  publisher		  = {ACM},
+  address		  = {New York, NY, USA}
+}
+
+@article{ORBSLAM3_TRO,
+  title =		 {{ORB-SLAM3}: An Accurate Open-Source Library for Visual,
+                  Visual-Inertial and Multi-Map {SLAM}},
+  author =		 {Campos, Carlos AND Elvira, Richard AND G\´omez, Juan J. AND
+                  Montiel, Jos\'e M. M. AND Tard\'os, Juan D.},
+  journal =		 {IEEE Transactions on Robotics},
+  volume =		 {37},
+  number =		 {6},
+  pages =		 {1874-1890},
+  year =		 {2021}
+}
+
+@INPROCEEDINGS{9561107,
+  author =		 {Yau, Tiffany and Malekmohammadi, Saber and Rasouli, Amir and
+                  Lakner, Peter and Rohani, Mohsen and Luo, Jun},
+  booktitle =	 {2021 IEEE International Conference on Robotics and Automation
+                  (ICRA)},
+  title =		 {Graph-SIM: A Graph-based Spatiotemporal Interaction Modelling
+                  for Pedestrian Action Prediction},
+  year =		 2021,
+  pages =		 {8580-8586},
+  doi =			 {10.1109/ICRA48506.2021.9561107}
+}
+
+@inproceedings{wang2023pypose,
+  title =		 {{PyPose}: A Library for Robot Learning with Physics-based
+                  Optimization},
+  author =		 {Wang, Chen and Gao, Dasong and Xu, Kuan and Geng, Junyi and
+                  Hu, Yaoyu and Qiu, Yuheng and Li, Bowen and Yang, Fan and
+                  Moon, Brady and Pandey, Abhinav and Aryan and Xu, Jiahe and
+                  Wu, Tianhao and He, Haonan and Huang, Daning and Ren,
+                  Zhongqiang and Zhao, Shibo and Fu, Taimeng and Reddy, Pranay
+                  and Lin, Xiao and Wang, Wenshan and Shi, Jingnan and Talak,
+                  Rajat and Cao, Kun and Du, Yi and Wang, Han and Yu, Huai and
+                  Wang, Shanzhao and Chen, Siyu and Kashyap, Ananth and Bandaru,
+                  Rohan and Dantu, Karthik and Wu, Jiajun and Xie, Lihua and
+                  Carlone, Luca and Hutter, Marco and Scherer, Sebastian},
+  booktitle =	 {IEEE/CVF Conference on Computer Vision and Pattern Recognition
+                  (CVPR)},
+  year =		 {2023}
 }
