--- a/bib-file.bib
+++ b/bib-file.bib
@@ -72159,7 +72159,7 @@
   title =		 {{ORB-SLAM3}: An Accurate Open-Source Library for Visual,
                   Visual-Inertial and Multi-Map {SLAM}},
   author =		 {Campos, Carlos AND Elvira, Richard AND G\´omez, Juan J. AND
-                  Montiel, Jos\'e M. M. AND Tard\'os, Juan D.},
+                  Montiel, Jos\'e M. M. AND Tard\'os, Juan D.},q
   journal =		 {IEEE Transactions on Robotics},
   volume =		 {37},
   number =		 {6},
@@ -72180,9 +72180,9 @@
 }
 
 @inproceedings{wang2023pypose,
-  title =		 {{PyPose}: A Library for Robot Learning with Physics-based
+  title			  = {{PyPose}: A Library for Robot Learning with Physics-based
                   Optimization},
-  author =		 {Wang, Chen and Gao, Dasong and Xu, Kuan and Geng, Junyi and
+  author		  = {Wang, Chen and Gao, Dasong and Xu, Kuan and Geng, Junyi and
                   Hu, Yaoyu and Qiu, Yuheng and Li, Bowen and Yang, Fan and
                   Moon, Brady and Pandey, Abhinav and Aryan and Xu, Jiahe and
                   Wu, Tianhao and He, Haonan and Huang, Daning and Ren,
@@ -72192,7 +72192,21 @@
                   Wang, Shanzhao and Chen, Siyu and Kashyap, Ananth and Bandaru,
                   Rohan and Dantu, Karthik and Wu, Jiajun and Xie, Lihua and
                   Carlone, Luca and Hutter, Marco and Scherer, Sebastian},
-  booktitle =	 {IEEE/CVF Conference on Computer Vision and Pattern Recognition
-                  (CVPR)},
-  year =		 {2023}
+  booktitle		  = {IEEE/CVF Conference on Computer Vision and Pattern
+                  Recognition (CVPR)},
+  year			  = 2023
+}
+
+@article{MAL-086,
+  url			  = {http://dx.doi.org/10.1561/2200000086},
+  year			  = 2023,
+  volume		  = 16,
+  journal		  = {Foundations and TrendsÂ® in Machine Learning},
+  title			  = {Model-based Reinforcement Learning: A Survey},
+  doi			  = {10.1561/2200000086},
+  issn			  = {1935-8237},
+  number		  = 1,
+  pages			  = {1-118},
+  author		  = {Thomas M. Moerland and Joost Broekens and Aske Plaat and
+                     Catholijn M. Jonker}
 }
